--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -484,12 +484,10 @@
 }
 
 .emoji-wrapper {
+  position: relative;
+  height: 375px;
+  min-height: 375px;
   width: 100%;
-  // height: 50%;
-  // height: 400px;
-  // bottom: 54px;
-  // display: flex;
-  // align-items: flex-end;
   margin-top: auto;
 
   .emoji-mart {
@@ -525,7 +523,7 @@
       width: 100%;
       padding: 6px 0;
       border-radius: 5px;
-      border: 1px solid #555453;
+      // border: 1px solid #555453;
       outline: 0;
       &:focus {
         border-bottom: 1px solid #555453 !important;
@@ -537,5 +535,39 @@
 
   .emoji-mart-scroll {
     height: 240px;
+  }
+
+  .gif-container {
+    width: 100%;
+    height: 100%;
+    background-color: #222;
+  }
+
+  .emoji-gif-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 46px;
+    bottom: 0;
+    background-color: #222;
+    border-top: 1px solid #555453;
+    button {
+      background-color: unset;
+      border: none;
+      outline: none;
+      width: 80px;
+      height: 30px;
+      border-radius: 20px;
+      border: 1px solid #555453;
+      color: white;
+      margin: 0 2px;
+    }
+  }
+  .selected {
+    color: #0575e6 !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2) !important;
   }
 }
