--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -113,6 +113,9 @@
       }
     }
   }
+}
+
+.input-wrapper {
   .search-box {
     position: relative;
     width: 100%;
@@ -541,6 +544,77 @@
     width: 100%;
     height: 100%;
     background-color: #222;
+    padding-bottom: 46px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    .query-gifs {
+      display: inline-block;
+      grid-template-columns: unset !important;
+      -webkit-column-count: 3;
+      -webkit-column-gap: 0px;
+      -moz-column-count: 3;
+      -moz-column-gap: 0px;
+      column-count: 3 !important;
+      column-gap: 0px;
+      li {
+        width: fit-content;
+        height: unset;
+        max-height: unset !important;
+        margin: 5px;
+      }
+    }
+    ul {
+      height: 100%;
+      width: 100%;
+      overflow-y: auto;
+      padding: 0 14px;
+      display: grid;
+      grid-gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+
+      li {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        max-height: 120px;
+        border-radius: 6px;
+
+        &:last-of-type {
+          &:after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 8px;
+          }
+        }
+
+        .overlay {
+          position: absolute;
+          inset: 0;
+          border-radius: 6px;
+          display: grid;
+          place-items: center;
+          background-color: rgba(0, 0, 0, 0.2);
+          color: white;
+          font-weight: 700;
+          text-shadow: 0px 0px 1px black;
+          transition: 200ms;
+          border: 2px solid transparent;
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.6);
+            border: 2px solid #0575e6;
+          }
+        }
+        img {
+          border-radius: 6px;
+          object-fit: cover;
+          object-position: 50% 30%;
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
 
   .emoji-gif-box {
