gif layout and query

--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -116,6 +116,9 @@
 }
 
 .input-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .search-box {
     position: relative;
     width: 100%;
@@ -545,23 +548,22 @@
     height: 100%;
     background-color: #222;
     padding-bottom: 46px;
-    overflow-y: auto;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     .query-gifs {
-      display: inline-block;
-      grid-template-columns: unset !important;
-      -webkit-column-count: 10;
-      -webkit-column-gap: 0px;
-      -moz-column-count: 10;
-      -moz-column-gap: 0px;
-      column-count: 10;
-      column-gap: 0px;
-      li {
-        width: fit-content;
-        height: unset;
-        max-height: unset !important;
-        margin: 5px;
+      display: flex;
+      justify-content: center;
+      grid-gap: 0;
+      .column {
+        height: 100%;
+        width: 100%;
+        li {
+          height: unset !important;
+          max-height: unset !important;
+          margin-top: -5px;
+          padding: 5px;
+        }
       }
     }
     ul {
