--- a/client/src/style/_media.scss
+++ b/client/src/style/_media.scss
@@ -1,59 +1,54 @@
-@media all and (max-width: 2000px) {
-  .gif-container {
-    .__gif-wrapper__ {
-      .query-gifs {
-        -webkit-column-count: 8;
-        -moz-column-count: 8;
-        column-count: 8;
-      }
-    }
-  }
-}
+// @media all and (max-width: 2000px) {
+//   .gif-container {
+//     .__gif-wrapper__ {
+//       .query-gifs {
+//         -webkit-column-count: 8;
+//         -moz-column-count: 8;
+//         column-count: 8;
+//       }
+//     }
+//   }
+// }
 
-@media all and (max-width: 1600px) {
-  .gif-container {
-    .__gif-wrapper__ {
-      .query-gifs {
-        -webkit-column-count: 7;
-        -moz-column-count: 7;
-        column-count: 7;
-      }
-    }
-  }
-}
+// @media all and (max-width: 1600px) {
+//   .gif-container {
+//     .__gif-wrapper__ {
+//       .query-gifs {
+//         -webkit-column-count: 7;
+//         -moz-column-count: 7;
+//         column-count: 7;
+//       }
+//     }
+//   }
+// }
 
-@media all and (max-width: 1200px) {
-  .gif-container {
-    .__gif-wrapper__ {
-      .query-gifs {
-        -webkit-column-count: 6;
-        -moz-column-count: 6;
-        column-count: 6;
-      }
-    }
-  }
-}
+// @media all and (max-width: 1200px) {
+//   .gif-container {
+//     .__gif-wrapper__ {
+//       .query-gifs {
+//         -webkit-column-count: 6;
+//         -moz-column-count: 6;
+//         column-count: 6;
+//       }
+//     }
+//   }
+// }
 
-@media all and (max-width: 992px) {
-  .gif-container {
-    .__gif-wrapper__ {
-      .query-gifs {
-        -webkit-column-count: 4;
-        -moz-column-count: 4;
-        column-count: 4;
-      }
-    }
-  }
-}
+// @media all and (max-width: 992px) {
+//   .gif-container {
+//     .__gif-wrapper__ {
+//       .query-gifs {
+//         -webkit-column-count: 4;
+//         -moz-column-count: 4;
+//         column-count: 4;
+//       }
+//     }
+//   }
+// }
 
 @media all and (max-width: 540px) {
   .gif-container {
     .__gif-wrapper__ {
-      .query-gifs {
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
-      }
       ul {
         grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
         li {
@@ -68,11 +63,6 @@
   .page {
     .gif-container {
       .__gif-wrapper__ {
-        .query-gifs {
-          -webkit-column-count: 2;
-          -moz-column-count: 2;
-          column-count: 2;
-        }
         ul {
           grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
           li {
