--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -666,3 +666,25 @@
     background-color: rgba(0, 0, 0, 0.2) !important;
   }
 }
+
+.new-day-message {
+  position: relative;
+  width: 100%;
+  display: grid;
+  place-items: center;
+  span {
+    background-color: var(--primary-background);
+    color: rgb(98, 112, 134);
+    padding: 10px;
+    z-index: 1;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 100%;
+    height: 1px;
+    background-color: rgb(49, 51, 68);
+  }
+}
