--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -165,3 +165,22 @@
     clip-path: circle(150% at 50% 100%);
   }
 }
+
+.LOAD_MESSAGES {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  .new-day-message {
+    padding-top: 50px;
+    &:after {
+      margin-top: 25px;
+    }
+  }
+}
+
+.infinite-scroll-component__outerdiv {
+  height: 100%;
+  overflow: auto;
+}
