--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -85,15 +85,15 @@ body {
           overflow: hidden;
           white-space: nowrap;
         }
-        .chat {
-          font-size: 16px;
-        }
         .chat-people {
           // position: absolute;
           font-size: 11px;
           color: gray;
           // line-height: 0.8;
           margin-bottom: -2px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
         .message {
           color: rgb(170, 170, 170);
@@ -205,8 +205,27 @@ body {
     }
   }
   .settings-section {
-    height: auto;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    .logout-btn {
+      position: absolute;
+      bottom: 40px;
+      width: 100%;
+      height: 50px;
+      border: none;
+      border-top: 1px solid rgb(219, 27, 27);
+      border-bottom: 1px solid rgb(219, 27, 27);
+      background-color: transparent;
+      color: rgb(219, 27, 27);
+      // color: white;
+      outline: none;
+      transition: 100ms;
+      &:active {
+        outline: none;
+        font-size: 13px;
+      }
+    }
   }
 }
 
@@ -910,7 +929,7 @@ body {
 
     .video-container {
       position: relative;
-      max-width: 800px;
+      max-width: 990px;
       width: 100%;
       height: 100%;
       display: grid;
@@ -994,5 +1013,23 @@ body {
     font-size: 22px;
     margin: 6px 0 0 6px;
     z-index: 10;
+  }
+}
+
+.send-photo-page {
+  .check-icon {
+    color: var(--primary-cyan);
+  }
+
+  .send-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    background-color: var(--primary-cyan);
+    border: none;
+    outline: none;
+    padding: 12px 20px;
+    border-radius: 20px;
   }
 }
