--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -691,3 +691,97 @@
     background-color: rgb(49, 51, 68);
   }
 }
+
+.chat-list {
+  // div {
+  width: 100%;
+  height: 100%;
+  color: white;
+  overflow-y: auto;
+  li {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 78px;
+    .selected-chat-checkbox {
+      margin-left: 14px;
+      width: 60px;
+      height: 60px;
+      background-color: var(--primary-cyan);
+      position: absolute;
+      border-radius: 100%;
+      z-index: 1;
+      display: grid;
+      place-items: center;
+      color: black;
+      font-size: 17px;
+      opacity: 0;
+      transition: 250ms;
+    }
+    .text-box {
+      position: relative;
+      pointer-events: none;
+      padding-left: 12px;
+      flex-grow: 1;
+      width: 0;
+      .friend {
+        font-size: 16px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      .chat-people {
+        // position: absolute;
+        font-size: 11px;
+        color: gray;
+        // line-height: 0.8;
+        margin-bottom: -2px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      .message {
+        color: rgb(170, 170, 170);
+        // display: inline-block;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        margin-top: -2px;
+      }
+    }
+    .time-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-end;
+      margin-right: 14px;
+      .thumbtack {
+        color: var(--primary-cyan);
+        opacity: 0.5;
+        transform: rotate(45deg);
+      }
+      .time-box {
+        pointer-events: none;
+        padding-left: 20px;
+        margin-left: auto;
+        color: rgb(170, 170, 170);
+      }
+    }
+  }
+  .archived-box {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    svg {
+      color: var(--primary-cyan);
+      font-size: 18px;
+      margin: 0 33px 0 35px;
+      opacity: 0.5;
+    }
+  }
+  .bottom-space {
+    width: 100%;
+    height: 58px;
+  }
+  // }
+}
