--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -47,100 +47,6 @@ body {
   display: flex;
   flex-direction: column;
 
-  .chat-list {
-    // div {
-    width: 100%;
-    height: 100%;
-    color: white;
-    overflow-y: auto;
-    li {
-      position: relative;
-      display: flex;
-      align-items: center;
-      height: 78px;
-      .selected-chat-checkbox {
-        margin-left: 14px;
-        width: 60px;
-        height: 60px;
-        background-color: var(--primary-cyan);
-        position: absolute;
-        border-radius: 100%;
-        z-index: 1;
-        display: grid;
-        place-items: center;
-        color: black;
-        font-size: 17px;
-        opacity: 0;
-        transition: 250ms;
-      }
-      .text-box {
-        position: relative;
-        pointer-events: none;
-        padding-left: 12px;
-        flex-grow: 1;
-        width: 0;
-        .friend {
-          font-size: 16px;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-        }
-        .chat-people {
-          // position: absolute;
-          font-size: 11px;
-          color: gray;
-          // line-height: 0.8;
-          margin-bottom: -2px;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-        }
-        .message {
-          color: rgb(170, 170, 170);
-          // display: inline-block;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-          margin-top: -2px;
-        }
-      }
-      .time-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-        margin-right: 14px;
-        .thumbtack {
-          color: var(--primary-cyan);
-          opacity: 0.5;
-          transform: rotate(45deg);
-        }
-        .time-box {
-          pointer-events: none;
-          padding-left: 20px;
-          margin-left: auto;
-          color: rgb(170, 170, 170);
-        }
-      }
-    }
-    .archived-box {
-      height: 50px;
-      display: flex;
-      align-items: center;
-      svg {
-        color: var(--primary-cyan);
-        font-size: 18px;
-        margin: 0 33px 0 35px;
-        opacity: 0.5;
-      }
-    }
-    .bottom-space {
-      width: 100%;
-      height: 58px;
-    }
-    // }
-  }
-
   .footer-wrapper {
     position: absolute;
     width: 100%;
@@ -1031,5 +937,92 @@ body {
     outline: none;
     padding: 12px 20px;
     border-radius: 20px;
+  }
+}
+
+.setup-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding: 28px;
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 14px;
+    .section {
+      margin: 14px 0;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .upload-camera-box {
+        width: 140px;
+        height: 140px;
+        font-size: 40px;
+        border: 4px dashed rgb(175, 175, 175);
+        margin: 0;
+        text-align: center;
+        margin-bottom: 8px;
+        .plus-icon-box {
+          right: 6px;
+          top: 6px;
+          width: 24px;
+          height: 24px;
+          .plus-icon {
+            font-size: 17px;
+          }
+        }
+      }
+
+      .label {
+        font-size: 16px;
+        color: rgb(210, 210, 210);
+      }
+      input {
+        color: white;
+        width: 100%;
+        height: 50px;
+      }
+    }
+    .top {
+      text-align: center;
+    }
+  }
+  .bottom-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 0 10px;
+    button {
+      border: none;
+      outline: none;
+      padding: 8px;
+      border-radius: 20px;
+      &:disabled,
+      &[disabled] {
+        opacity: 0.5;
+      }
+    }
+    .skip-btn {
+      color: var(--primary-cyan);
+      background-color: transparent;
+    }
+    .next-btn {
+      background-color: var(--primary-cyan);
+      width: 60px;
+      color: white;
+      font-weight: 700;
+    }
   }
 }
