--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -26,6 +26,9 @@
   position: absolute !important;
   inset: 0;
   margin-top: 44px;
+  // ::-webkit-scrollbar {
+  //   width: 50px;
+  // }
 }
 
 // GO FORWARD
