--- a/client/src/style/_components.scss
+++ b/client/src/style/_components.scss
@@ -67,6 +67,18 @@
           font-size: 18px;
           color: white;
         }
+        .add-wrapper {
+          position: relative;
+        }
+        .notification-bubble {
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          background: var(--primary-cyan);
+          border-radius: 100%;
+          top: 0;
+          right: 10px;
+        }
       }
     }
     .edit-chat-container {
@@ -109,6 +121,8 @@
             width: 26px;
             height: 2px;
             position: absolute;
+            bottom: 22px;
+            left: 7px;
             transform: rotate(35deg);
             transition: 1s;
           }
@@ -116,6 +130,19 @@
       }
     }
   }
+}
+
+.stroke {
+  display: none;
+  background-color: white;
+  box-shadow: 0px 0px 0px 1px rgb(24, 24, 24);
+  width: 20px;
+  height: 2px;
+  position: absolute;
+  transform: rotate(35deg);
+  bottom: 15px;
+  left: 4px;
+  transition: 1s;
 }
 
 .input-wrapper {
@@ -695,7 +722,6 @@
 .chat-list {
   // div {
   width: 100%;
-  height: 100%;
   color: white;
   overflow-y: auto;
   li {
@@ -784,4 +810,24 @@
     height: 58px;
   }
   // }
+}
+
+.settings-popover {
+  .popover-content {
+    top: 96px !important;
+    left: unset !important;
+    right: 8px !important;
+    transform-origin: right top !important;
+    background-color: rgb(34, 34, 34);
+    .popover-container {
+      padding: 12px;
+      color: white;
+      div {
+        padding: 6px 8px;
+        svg {
+          margin-right: 8px;
+        }
+      }
+    }
+  }
 }
