--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -22,6 +22,7 @@ body {
   background-color: var(--primary-background);
   height: 100vh;
   width: 100vw;
+  overflow: var(--overflow);
 }
 
 #root {
@@ -46,7 +47,6 @@ body {
 .home-page {
   display: flex;
   flex-direction: column;
-
   .footer-wrapper {
     position: absolute;
     width: 100%;
@@ -67,8 +67,6 @@ body {
         place-items: center;
         width: 46px;
         height: 46px;
-        // background: var(--primary-gradient);
-        // background: var(--cyan-gradient);
         border-radius: 100%;
         font-size: 24px;
       }
@@ -84,9 +82,9 @@ body {
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     button {
-      margin-right: 12px;
+      margin-left: 12px;
       padding: 12px;
       color: white;
       background-color: transparent;
@@ -240,7 +238,6 @@ body {
 
 .add-page {
   width: 100%;
-  height: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -258,7 +255,7 @@ body {
   }
   .incoming-requests-wrapper {
     color: white;
-    min-width: 100%;
+    // min-width: 100%;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -288,6 +285,22 @@ body {
 
   .react-swipeable-view-container {
     transition: transform 0.2s cubic-bezier(0.15, 0.3, 0.25, 1) 0s !important;
+  }
+
+  .content-wrapper {
+    display: flex;
+    // position: fixed;
+    width: 200%;
+    height: 100%;
+    top: 196px;
+    transform: translate3d(-0%, 0, 0);
+    transition: 200ms ease-in-out;
+    .page-section {
+      // background-color: rgba(255, 0, 0, 0.192);
+      // border: 2px solid white;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
@@ -402,9 +415,8 @@ body {
   flex-direction: column;
   .header-wrapper {
     position: absolute;
-    width: 100%;
+    width: calc(100% - 8px);
     overflow: hidden;
-    top: -2px;
     .header {
       position: relative;
       width: 100%;
@@ -414,8 +426,6 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        color: var(--primary-cyan);
-        color: #38af6e;
         color: #1aadad;
         width: 100%;
         height: 52px;
@@ -454,8 +464,6 @@ body {
                 right: 2px;
                 z-index: 10;
                 box-shadow: 0px 0px 0px 2px rgba(17, 17, 17, 0.8);
-                // -webkit-box-shadow: 1px 1px 0px 4px rgba(0, 0, 0, 1);
-                // -moz-box-shadow: 1px 1px 0px 4px rgba(0, 0, 0, 1);
               }
             }
             .img-box-wrapper-group {
@@ -532,7 +540,6 @@ body {
         border-radius: 100%;
         background-color: var(--primary-background);
       }
-      // background-color: black;
     }
     .message-list {
       position: relative;
@@ -582,7 +589,6 @@ body {
         background-size: 100% var(--background-size-h);
         background-position-y: 44px;
 
-        // animation: bubbleFadeIn 400ms;
         clip-path: circle(150% at 50% 100%);
         a {
           color: white;
@@ -595,7 +601,6 @@ body {
         padding: 6px 10px;
         min-width: 30px;
         clip-path: circle(150% at 50% 100%);
-        // animation: bubbleFadeIn 400ms;
         a {
           &:hover {
             text-decoration: underline;
@@ -607,7 +612,6 @@ body {
         max-width: 300px;
         max-height: 300px;
         display: flex;
-        // animation: bubbleFadeIn 400ms;
         clip-path: circle(150% at 50% 100%);
         img {
           width: 100%;
@@ -657,7 +661,6 @@ body {
     display: flex;
     align-items: flex-end;
     color: white;
-    color: var(--primary-cyan);
     color: #0575e6;
     padding-bottom: 4px;
     padding-top: 4px;
@@ -695,7 +698,6 @@ body {
       font-size: 20px;
       border-radius: 100%;
       margin-right: 8px;
-      // background: var(--secondary-cyan);
       background: #0575e6;
       transition: 100ms;
       color: white;
@@ -831,11 +833,14 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    max-width: 990px;
     overflow: hidden;
 
     .video-container {
       position: relative;
-      max-width: 990px;
+      // max-width: 990px;
       width: 100%;
       height: 100%;
       display: grid;
