user last active + message re-render bug

--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -11,6 +11,7 @@
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
   --primary-background: #101218;
   --secondary-background: #1a1c20;
+  --user-active-color: rgb(0, 255, 0);
   --overflow: unset;
   --ripple-scale: 0;
   --ripple-color: white;
