--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -453,18 +453,18 @@ body {
               width: 36px;
               height: 36px;
               min-width: 36px;
-              &::after {
-                position: absolute;
-                content: "";
-                width: 7px;
-                height: 7px;
-                background-color: rgb(0, 255, 0);
-                border-radius: 100%;
-                bottom: 2px;
-                right: 2px;
-                z-index: 10;
-                box-shadow: 0px 0px 0px 2px rgba(17, 17, 17, 0.8);
-              }
+              // &::after {
+              //   position: absolute;
+              //   content: "";
+              //   width: 7px;
+              //   height: 7px;
+              //   background-color: var(--user-active-color);
+              //   border-radius: 100%;
+              //   bottom: 2px;
+              //   right: 2px;
+              //   z-index: 10;
+              //   box-shadow: 0px 0px 0px 2px rgba(17, 17, 17, 0.8);
+              // }
             }
             .img-box-wrapper-group {
               position: relative;
