--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -841,6 +841,8 @@ body {
   }
 }
 .edit-chat-hr {
+  margin: 4px auto;
+  width: 80%;
   border: none;
   height: 1px;
   color: #333; /* old IE */
