--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -537,6 +537,73 @@ body {
     }
   }
 
+  .users-container {
+    display: flex;
+    position: fixed;
+    width: calc(100% - 8px);
+    top: 100px;
+    width: 100%;
+    padding: 2px 0;
+    // height: 50px;
+    // background-color: rgba(255, 255, 0, 0.164);
+    z-index: 2;
+    .users-list {
+      display: flex;
+      align-items: center;
+      color: white;
+      height: 100%;
+      width: 100%;
+      overflow-x: auto;
+      .list-item {
+        margin: 0 2px;
+        .name {
+          max-height: 20px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+          background-color: rgba(0, 0, 0, 0.5);
+          padding: 2px 4px;
+          line-height: 1;
+          border: 1px solid var(--top-color);
+          border-radius: 20px;
+          -webkit-user-select: none; /* Safari */
+          -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* IE10+/Edge */
+          user-select: none; /* Standard */
+        }
+      }
+    }
+    .user-detail-container {
+      position: absolute;
+      height: 100px;
+      width: 180px;
+      background: rgb(55, 56, 61);
+      border-radius: 10px;
+      top: 25px;
+      overflow: hidden;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* IE10+/Edge */
+      user-select: none; /* Standard */
+      .user-detail-inner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        pointer-events: none;
+      }
+    }
+  }
+  .user-detail-click-catcher {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top: 52px;
+    height: calc(100% - 100px);
+  }
+
   .message-container {
     width: 100%;
     height: 100%;
@@ -566,7 +633,7 @@ body {
       display: flex;
       flex-direction: column-reverse;
       overflow: auto;
-      padding-top: 50px;
+      padding-top: 70px;
       // margin-top: 50px;
 
       .my-message {
