--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -220,9 +220,13 @@ body {
       font-size: 22px;
     }
   }
-  input {
-    color: white;
+  .main-content {
+    padding: 0 14px;
+    input {
+      color: white;
+    }
   }
+
   .save-btn {
     position: absolute;
     bottom: 12px;
@@ -1062,12 +1066,14 @@ body {
 }
 
 .send-photo-page {
+  display: flex;
+  flex-direction: column;
   .check-icon {
     color: var(--primary-cyan);
   }
 
   .send-btn {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     color: white;
