demo user + isMobile listener

--- a/client/src/style/_buttons.scss
+++ b/client/src/style/_buttons.scss
@@ -3,6 +3,7 @@
   button {
     background: var(--secondary-background);
     height: 50px;
+    min-height: 50px;
     margin: 8px;
     border-radius: 20px;
     width: 100%;
