--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -36,6 +36,13 @@ body {
   justify-content: flex-end;
   align-items: center;
   padding: 150px 28px 80px 28px;
+  .bottom-wrapper {
+    width: 100%;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   form {
     width: 100%;
     display: flex;
@@ -560,7 +567,7 @@ body {
     display: flex;
     position: fixed;
     width: calc(100% - 8px);
-    top: 100px;
+    top: 56px;
     width: 100%;
     padding: 2px 0;
     // height: 50px;
@@ -691,7 +698,7 @@ body {
         background-image: var(--bubble-gradient);
         background-attachment: fixed;
         background-size: 100% var(--background-size-h);
-        background-position-y: 44px;
+        // background-position-y: 44px; use this when using DeviceInfo
 
         clip-path: circle(150% at 50% 100%);
         a {
