--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -54,8 +54,20 @@ body {
 .home-page {
   display: flex;
   flex-direction: column;
+  .empty-chats-wrapper {
+    .main-label {
+      font-size: 20px;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: calc(100% - 228px);
+    color: rgb(161, 161, 161);
+  }
   .footer-wrapper {
-    position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0;
     height: 58px;
@@ -271,6 +283,14 @@ body {
     flex-direction: column;
     overflow-y: auto;
     height: 100%;
+    .empty-friends-wrapper {
+      width: 100%;
+      height: calc(100% - 88px);
+      display: grid;
+      place-items: center;
+      color: #a1a1a1;
+      font-size: 16px;
+    }
     .incoming__label {
       font-size: 20px;
       padding: 14px 14px 0 14px;
@@ -308,6 +328,15 @@ body {
     .page-section {
       width: 100%;
       height: 100%;
+      .empty-requests-wrapper {
+        width: 100%;
+        height: 100%;
+        color: #a1a1a1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+      }
       .cancel-request-btn {
         height: 30px;
         width: 30px;
@@ -492,6 +521,8 @@ body {
             align-items: center;
             flex-grow: 1;
             width: 0;
+            opacity: 0;
+            transition: 100ms;
             .img-box-wrapper {
               position: relative;
               width: 36px;
@@ -570,6 +601,8 @@ body {
     top: 56px;
     width: 100%;
     padding: 2px 0;
+    opacity: 0;
+    transition: 100ms;
     // height: 50px;
     // background-color: rgba(255, 255, 0, 0.164);
     z-index: 2;
@@ -636,6 +669,8 @@ body {
     background-color: var(--primary-background);
     color: white;
     overflow: hidden;
+    transition: 100ms;
+    opacity: 0;
     .load-messages-spinner {
       position: fixed;
       width: 100%;
